penambahan fitur yang belum

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "phpoffice/phpword": "^1.4"
+        "phpoffice/phpword": "^1.4",
+        "realrashid/sweet-alert": "^7.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
